today's work 24/nov